<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Imsakiyah Digital</string>
	<string name="mushola">MASJID DARUSSALAM</string>
	<string name="alamat">Jl. Jawar KM 3 Kalibeber Mojotengah</string>
	<string name="mushola2">MASJID DARRUSALAM</string>
	<string name="alamat2">KALIBEBER MOJOTENGAH\nJL. Jawar km3</string>
	<string name="kajiansubuh">Hadirilah dan Ikutilah !!! Kuliah Subuh setiap ba`da subuh, Kajian Ahad Pagi setiap Ahad Jam 06.00 s/d 07.00 </string>
	<string name="kajiansubuhjihad">Hadirilah !!! Kajian Ahad Pagi Setiap Ahad Jam 06.00 sampai dengan 07.00 .........</string>
	<string name="kajiansubuh2">Setiap Hari Jumat dan Sabtu</string>
	<string name="luruskanshoff">Rapatkan dan Luruskan Shoff!</string>
	<string name="textnextpray">Jadwal Sholat Hari ini</string>
	<string name="ayat">Hello world!</string>
	<string name="infotimer">Timer menit antara Adzan dan Iqomat</string>
	<string name="dp12">12dp</string>
	<string name="infodate">KAMIS, KLIWON \n30 JUMADAL AKHIRAH 1444\n 12 DESEMBER 2022</string>
	<string name="delete">Delete</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_new_notes">New Notes</string>
	<string name="title_activity_answer_card">AnswerCard</string>
	<string name="urlupdateapp">https://www.mbswonosobo.com/apk/</string>


<!--  file -->
	<string name="wlan_enabled">Server is enabled</string>
	<string name="wlan_disabled">Server is disabled</string>
	<string name="pls_check_network_state">Connecting device should in same WIFI, \n or connected the hotspot of this device</string>
	<string name="fail_to_start_http_service">Start HTTP server failed</string>
	<string name="retrofit_wlan_address">Retrieving wlan address&#8230;</string>
	<string name="pls_input_the_following_address_in_pc_browser">Please open the following address</string>
	<string name="click_to_enable_server">Click icon above to enable server</string>
	<string name="cancel">Cancel</string>
	<string name="disappear">Hide</string>
	<string name="ok">Sure</string>
	<string name="copy_toast">Copied, open in browser of connected device</string>
	<string name="set_network">Copy Address</string>
	<string name="http_address">http://%1$s:%2$d</string>
	<string name="permission_setting">permission request</string>
	<string name="permission_need_des">The App needs the permission to save files in sdcard</string>
	<string name="permission_go">enable permission</string>
	<string name="empty_text">Empty now\nClick the button below, and start file transfer～</string>
	<string name="install">Install</string>
	<string name="uninstall">Uninstall</string>
	<string name="app_name_format">%1$s(v%2$s)</string>
	<string name="no_program_open_it">Cannot open it</string>
	<string name="delete_all">Delete All</string>
	<string name="sure_delete_all">Delete All？</string>
	<string name="share">Share</string>
	<string name="upload">Upload Files</string>
	<string name="read_file_failed">File fetch failed</string>
	<string name="please_refresh_web">Upload success, please refresh web page</string>

</resources>