<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
	android:background="@drawable/a3"
	android:id="@+id/layout_bg"
>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/layout_vertical_titleh"
			android:orientation="horizontal"
			android:layout_gravity="center"
			android:gravity="center"
			android:background="@color/title_bg"
		>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="@dimen/layout_vertical_titleh"
				android:orientation="horizontal"
				android:gravity="right|center|end"
				android:layout_gravity="right|center_vertical|center_horizontal|end"
			
			>
				<TextView
					android:id="@+id/date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/layout_margin5h"
					android:layout_marginEnd="@dimen/layout_margin10h"
					android:textSize="@dimen/Texttglh"
					android:text="kamis, 21.03.2022"
					android:fontFamily="res/font/bahnschrift.ttf"
					android:textColor="#ffffff"
					android:onClick="onClickJadwal"
					android:gravity="right|center|end"
					android:layout_gravity="right|center_vertical|center_horizontal|end"/>
				
				/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_margin="@dimen/layout_margin10h"
				android:layout_marginStart="@dimen/layout_margin10h"
			>
				<TextView
					android:id="@+id/masjid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					
					android:text="@string/mushola"
					android:textSize="@dimen/Textmasjidh"
					android:textColor="#ffffff"
					android:textStyle="bold"
					android:onClick="onClickJadwal"
					android:gravity="right|center|end"
					android:layout_gravity="right|center_vertical|center_horizontal|end"
					
				/>
				<TextView
					android:id="@+id/alamat"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/alamat"
					android:textColor="#e2f1fc"
					android:textSize="@dimen/Textalamath"
					android:textStyle="bold"
					android:gravity="right|center|end"
					android:layout_gravity="right|center_vertical|center_horizontal|end"
					
				/>

			</LinearLayout>
			
			
		
			<TextView
				android:id="@+id/time"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="20.00.00"
				android:textSize="@dimen/TextTimeh"
				android:fontFamily="res/font/clock.ttf"
				android:textStyle="bold|normal"
				android:textColor="#ffffff"
				android:layout_marginStart="@dimen/layout_margin10h"
				android:layout_marginTop="@dimen/layout_margin5h"
				android:onClick="onClickJadwal"
				android:gravity="right|center|end"
				android:layout_gravity="right|center_vertical|center_horizontal|end"
				
				
				/>
			
				
		
			
			
		</LinearLayout>



		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/layout_vertical_infoh"
			android:orientation="vertical"
			android:layout_marginTop="2dp"
		>

			<TextView
				android:id="@+id/vinfo"
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=""
				android:background="#52000000"
				android:textColor="#ffffff"
			/>

			<TextView
				android:id="@+id/vinfo2"
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=""
				android:textColor="#000000"
				android:background="#42ffffff"

			/>

		</LinearLayout>



		<TextView
			android:id="@+id/nextpray"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/Textiqomath"
			android:textColor="#ffffff"
			android:background="@color/tterbit"
			android:text="@string/textnextpray"
		/>



		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/layout_vertical_sholath"
			android:layout_gravity="bottom"
			android:layout_marginTop="3dp"
			android:orientation="horizontal"
			android:gravity="center"
			android:background="@color/jadwal_bg"
		>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="IMSAK"
					android:background="@color/timsak"
					android:textStyle="bold"
					android:textSize="@dimen/Textjadwalh"
					android:textColor="#ffffff"
				/>

				<TextView
					android:id="@+id/imsak"
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.30"
					android:fontFamily="res/font/clock.ttf"
					android:background="@color/jimsak"
					android:textColor="#ffffff"
					android:textStyle="bold"
					android:textSize="@dimen/Textjadwalh"
				/>

			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="SUBUH"
					android:background="@color/tsubuh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:textSize="@dimen/Textjadwalh"
				/>

				<TextView
					android:id="@+id/subuh"
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.30WIB"
					android:fontFamily="res/font/clock.ttf"
					android:background="@color/jsubuh"

					android:textColor="#ffffff"
					android:textStyle="bold"
					android:textSize="@dimen/Textjadwalh"
				/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="TERBIT" 
					android:background="@color/tterbit"

					android:textColor="#ffffff"
					android:textStyle="bold"
					android:textSize="@dimen/Textjadwalh"
				/>

				<TextView
					android:id="@+id/terbit"
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.00"
					android:fontFamily="res/font/clock.ttf"
					android:background="@color/jterbit"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:textSize="@dimen/Textjadwalh"
				/>

			</LinearLayout>


			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:background="@color/tdzuhur"
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:text="DZUHUR" />

				<TextView
					android:id="@+id/dzuhur"
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.00"
					android:background="@color/jdzuhur"
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:fontFamily="res/font/clock.ttf"
				/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"

				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:background="@color/tashar"
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:text="ASHAR" />

				<TextView
					android:id="@+id/ashar"
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.00" 
					android:background="@color/jashar"
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:fontFamily="res/font/clock.ttf"
				/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_maghribh"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:background="@color/tmaghrib"
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:text="MAGHRIB" />

				<TextView
					android:id="@+id/maghrib"
					android:layout_width="@dimen/layout_horizontal_maghribh"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.00" 
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:background="@color/jmaghrib"
					android:textColor="#ffffff"
					android:fontFamily="res/font/clock.ttf"
				/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"

				android:orientation="vertical">

				<TextView
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:background="@color/tisya"
					android:textSize="@dimen/Textjadwalh"
					android:textStyle="bold"
					android:textColor="#ffffff"
					android:text="ISYA" />

				<TextView
					android:id="@+id/isya"
					android:layout_width="@dimen/layout_horizontal_sholath"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="04.00" 
					android:background="@color/jisya"
					android:textSize="@dimen/Textjadwalh"
					android:fontFamily="res/font/clock.ttf"
					android:textStyle="bold"
					android:textColor="#ffffff"
				/>

			</LinearLayout>
		</LinearLayout>

		<TextView
			android:singleLine="true"
			android:ellipsize="marquee"
			android:marqueeRepeatLimit="marquee_forever"
			android:textSize="@dimen/Textfooth"
			android:id="@+id/footnote"
			android:paddingLeft="1.0dip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="1.0dip"
			android:text="@string/kajiansubuh"
			android:textStyle="bold|normal"
			android:typeface="sans"
			android:textColor="#ffffff"
			android:background="@color/foot_bg"
		/>
	</LinearLayout>

</LinearLayout>
